# shumbashi_blog

./: .gitmodules  README.md  archives.html  authors.html  bonjour.html  business-as-usual.html  categories.html  hello-world.html  index.html  my-first-review.html  my-super-post.html  pelicanconf.py  publishconf.py  pyproject.toml  tags.html  tasks.py
author/: ahmed-shibani.html
cache/: ArticlesGenerator-Readers  PagesGenerator-Readers
category/: python.html  review.html  test.html  testing.html
content/: bonjour.md  business_as_usual.md  hello-world.md  hellow-world.md
feeds/: all.atom.xml  python.atom.xml  review.atom.xml  test.atom.xml  testing.atom.xml
output/: archives.html  authors.html  business-as-usual.html  categories.html  hello-world.html  index.html  my-first-review.html  tags.html
output/author/: ahmed-shibani.html
output/category/: review.html  testing.html
output/feeds/: review.atom.xml
output/tag/: business.html  pygments.html
output/theme/css/: main.css
tag/: business.html  pelican.html  publishing.html  pygments.html
