[tool.poetry]
name = "shumbashi_blog"
version = "0.1.0"
description = "Shumbashi (Ahmed Shibani) Blog"
authors = ["Ahmed Shibani <sheipani@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
pelican = "^4.6.0"
Markdown = "^3.3.4"
typogrify = "^2.0.7"
invoke = "^1.5.0"
livereload = "^2.6.3"
ghp-import = "^1.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
